[FIX] reorganize code structure

--- a/yubikey/Makefile
+++ b/yubikey/Makefile
@@ -1,12 +1,10 @@
 CC=gcc
 CFLAGS=-O2 -Wall -g -lpthread -lcbor -lm -lcrypto
-objects = sendpackages.c authenticatorMakeCredential.c authenticatorStatics.c
+objects = sendpackages.c ctaplib.c authenticatorStatics.c interface.c
 
 .PHONY: all
 
 all: fakeYubi
-
-#gcc multi.c -o multi sendpackages.c authenticatorMakeCredential.c authenticatorStatics.c -O2 -Wall -g -lpthread -lcbor -lm -lcrypto
 
 fakeYubi: fakeYubi.c
 	$(CC) -o $@ $(objects) $< $(CFLAGS)
